User entries add

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
         "svgr",
         "testid",
         "webp"
-    ]
+    ],
+    "cSpell.ignorePaths": ["json-server/db.json", "json-server/market/data/**"]
 }
