move FavoriteCategoryModal to separate folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
+        "BIZNESA",
+        "buyertype",
         "carusel",
         "deepmerge",
+        "DLYA",
         "headertabroutes",
         "headlessui",
         "inited",
