clickable div keyboard support fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "carusel",
         "deepmerge",
         "DLYA",
+        "fetchpriority",
         "headertabroutes",
         "headlessui",
         "inited",
@@ -12,6 +13,7 @@
         "LOCALSTORAGE",
         "pmmmwh",
         "reduxjs",
+        "Spacebar",
         "stylelint",
         "svgr",
         "testid",
