--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "BIZNESA",
         "buyertype",
         "carusel",
+        "cvredirect",
         "deepmerge",
         "DLYA",
         "fetchpriority",
@@ -17,6 +18,7 @@
         "stylelint",
         "svgr",
         "testid",
+        "unselectable",
         "webp"
     ],
     "cSpell.ignorePaths": ["json-server/db.json", "json-server/market/data/**"]
