--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "languagedetector",
         "LOCALSTORAGE",
         "pmmmwh",
+        "promocodes",
         "reduxjs",
         "Spacebar",
         "stylelint",
