--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "carusel",
         "deepmerge",
         "DLYA",
+        "favoritecategory",
         "fetchpriority",
         "headertabroutes",
         "headlessui",
