json server image urls fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,8 @@
         "inited",
         "languagedetector",
         "LOCALSTORAGE",
+        "marketcms",
+        "mpic",
         "pmmmwh",
         "promocodes",
         "reduxjs",
