--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "languagedetector",
         "LOCALSTORAGE",
         "marketcms",
+        "marketfront",
         "mpic",
         "pmmmwh",
         "promocodes",
