LoginForm layout complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "marketcms",
         "marketfront",
         "mpic",
+        "passp",
         "pmmmwh",
         "promocodes",
         "reduxjs",
