--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,16 @@
 {
     "tabWidth": 4,
+    "printWidth": 100,
     "semi": true,
     "singleQuote": true,
+    "overrides": [
+        {
+            "files": "*.scss",
+            "options": {
+                "singleQuote": false
+            }
+        }
+    ],
     "trailingComma": "all",
     "bracketSpacing": true,
     "bracketSameLine": false,
