--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,6 +2,7 @@
     "extends": "stylelint-config-standard-scss",
     "rules": {
         "indentation": [4],
+        "max-line-length": 100,
         "selector-class-pattern": null
     }
 }
