--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
         "paths": {
             "@/*": ["./src/*"]
         },
+        "declaration": true,
+        "declarationMap": true,
         // esModuleInterop позволяет работать с пакетами, которые используют
         // common js как с обычными пакета с помощью import (require() module.export) = common js
         // import Moment from 'moment';
@@ -40,9 +42,5 @@
             "module": "CommonJS"
         }
     },
-    "include": [
-        "./config/jest/setupTests.ts",
-        "./src/**/*.ts",
-        "./src/**/*.tsx"
-    ]
+    "include": ["./config/jest/setupTests.ts", "./src/**/*.ts", "./src/**/*.tsx"]
 }
