Footer real layout add

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "marketcms",
         "marketfront",
         "mpic",
+        "Parens",
         "passp",
         "pmmmwh",
         "promocodes",
@@ -32,6 +33,7 @@
         "Spacebar",
         "stylelint",
         "svgr",
+        "termsofuse",
         "testid",
         "unselectable",
         "webp"
