--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
         // console.log(Moment);
         "esModuleInterop": true,
         // Если какая-либо библиотека не имеет default import,
-        // лоадеры вроде ts-loader или babel-loader автоматически создают их
+        // loaders вроде ts-loader или babel-loader автоматически создают их
         // вместо такого импорта
         // import * as React from 'react';
         // можно писать такой
