--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "webpack serve --env port=3000",
         "start:vite": "vite",
-        "build:prod": "webpack  --env mode=production",
+        "build:prod": "webpack  --env mode=production --env apiUrl=$apiUrl",
         "build:dev": "webpack  --env mode=development",
         "prettier": "npx prettier --write **/*.{ts,tsx,json}",
         "lint:ts": "eslint \"./src/**/*.{ts,tsx}\"",
