--- a/package.json
+++ b/package.json
@@ -117,7 +117,8 @@
         "webpack": "^5.69.1",
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.9.2",
-        "webpack-dev-server": "^4.7.4"
+        "webpack-dev-server": "^4.7.4",
+        "whatwg-fetch": "^3.6.20"
     },
     "dependencies": {
         "@headlessui/react": "^1.6.6",
