--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
         // Компилятор будет обрабатывать не только TS файлы, но и JS файлы
         "allowJs": true,
         "strict": true,
+        "skipLibCheck": true,
         "moduleResolution": "node",
         // Для абсолютного импорта
         "baseUrl": ".",
@@ -42,5 +43,9 @@
             "module": "CommonJS"
         }
     },
-    "include": ["./config/jest/setupTests.ts", "./src/**/*.ts", "./src/**/*.tsx"]
+    "include": [
+        "./config/jest/setupTests.ts",
+        "./src/**/*.ts",
+        "./src/**/*.tsx"
+    ]
 }
