--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -15,11 +15,15 @@ jobs:
             name: Storybook
             url: ${{ steps.build-publish.outputs.page_url }}
         runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                node-version: [20.x]
         steps:
             - uses: actions/checkout@v4
+            - name: Staring Node.js ${{ matrix.node-version }}
             - uses: actions/setup-node@v4
               with:
-                  node-version: '20.x'
+                  node-version: ${{ matrix.node-version }}
             - uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
               with:
                   install_command: npm ci
