--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -21,7 +21,7 @@ jobs:
         steps:
             - uses: actions/checkout@v4
             - name: Staring Node.js ${{ matrix.node-version }}
-            - uses: actions/setup-node@v4
+              uses: actions/setup-node@v4
               with:
                   node-version: ${{ matrix.node-version }}
             - uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
