--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "marketcms",
         "marketfront",
         "mpic",
+        "nums",
         "Parens",
         "passp",
         "pmmmwh",
