--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,27 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "label": "tsc watch",
+            "type": "shell",
+            "command": ".\\node_modules\\.bin\\tsc",
+            "isBackground": true,
+            "args": ["--watch", "--noEmit", "--project", "tsconfig.json"],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "presentation": {
+                "reveal": "never",
+                "echo": false,
+                "focus": false,
+                "panel": "dedicated"
+            },
+            "problemMatcher": "$tsc-watch",
+            "runOptions": {
+                "runOn": "folderOpen"
+            }
+        },
+        {
             "type": "npm",
             "script": "start:vite",
             "problemMatcher": [],
