README screenshots add

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
         "pmmmwh",
         "promocodes",
         "reduxjs",
+        "serg",
         "Spacebar",
         "stylelint",
         "svgr",
