RecommendationTabs switchable add

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,8 +31,10 @@
         "nums",
         "Parens",
         "passp",
+        "plusplus",
         "pmmmwh",
         "promocodes",
+        "recom",
         "reduxjs",
         "serg",
         "Spacebar",
